tests/suite/fail/regression/reg_move_9.ny
fn take(x: string) -> void { print(x) }
fn main() {
    let s = "r9"
    take(s)
    print(s) //~ ERROR was moved
}
